# agrisense-backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  README.md  roadmap
migrations/: 20260512191243_init_agrisense.sql  20260513121153_add_unique_seuil.sql  20260513122755_rename_type_columns.sql  20260603080610_add_temperature.sql  20260612143233_add_mode_capteur.sql  20260616173141_update_humidite_type.sql  20260618095832_add_demandes_capture.sql  20260706121040_add_chat_ia.sql  20260706140000_add_type_humidite_seuils.sql  20260710172508_add_seuil_temperature.sql  20260711202354_add_recommandations.sql  20260712212217_add_analyses_journalieres.sql  20260712215841_update_recommandations_schema.sql  20260712232456_add_model_image_id.sql  20260713153334_remove_unique_code_images.sql
src/: config.rs  errors.rs  main.rs  scheduler.rs  serial_reader.rs
src/db/: mod.rs
src/middlewares/: auth.rs
src/models/: mod.rs
src/routes/: auth.rs  capteurs.rs  capture.rs  champs.rs  chat.rs  cultures.rs  health.rs  humidite.rs  images.rs  mod.rs  node.rs  notifications.rs  recommandations.rs  seuils.rs  seuils_temperature.rs  temperature.rs  utilisateurs.rs
