[package]
name = "agrisense"
version = "0.1.0"
edition = "2024"

[dependencies]

# ── Serveur web ──────────────────────────────────────────────
axum = { version = "0.7", features = ["json", "multipart"] }  # multipart pour upload images
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serialport = "4.3"

# ── Base de données ──────────────────────────────────────────
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json"
] }

# ── Sérialisation ────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Authentification ─────────────────────────────────────────
argon2 = "0.5"                        # hashage mot de passe
jsonwebtoken = "9"                    # JWT
rand_core = { version = "0.6", features = ["std"] }  # sel aléatoire pour argon2

# ── Client HTTP (appel service Python IA) ────────────────────
reqwest = { version = "0.11", features = ["json", "multipart"] }

# ── Utilitaires ──────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"                      # fichier .env
thiserror = "1"                       # erreurs typées
anyhow = "1"                          # erreurs génériques
validator = { version = "0.18", features = ["derive"] }  # validation des inputs
tokio-cron-scheduler = "0.10"           # plannification de taches

# ── Logs ─────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
